# portfolio-squeeze-second-project

./: docker-compose.yml
backend/api/: Dockerfile  pyproject.toml
backend/api/app/: config.py  database.py  depends.py  main.py
backend/api/app/controllers/: cars_controller.py  user_controller.py
backend/api/app/routes/: cars_route.py  user_route.py
backend/api/app/schemas/: cars_schema.py  user_schema.py
backend/api/tests/: test_api.py
backend/service/: Dockerfile  pyproject.toml
backend/service/app/: database.py  filldata.py  main.py  read_data.py
backend/service/temp/: clients.xlsx
backend/test/: Dockerfile  pyproject.toml
backend/test/src/: test_helloword.py  test_requests.py
cache/: clients.xlsx
