[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Lucas Pires <piresnogueiralucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
pymongo = "^4.4.0"
motor = "^3.2.0"

python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
