[tool.poetry]
name = "services"
version = "0.1.0"
description = ""
authors = ["Lucas Pires <piresnogueiralucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.3"
openpyxl = "^3.1.2"
pymongo = "^4.4.0"
python-dotenv = "^1.0.0"
watchdog = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
