[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["Lucas Pires <piresnogueiralucas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
fastapi = "^0.100.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
